--- a/_portfolio/portfolio-Osa_lulc.html
+++ b/_portfolio/portfolio-Osa_lulc.html
@@ -5,3 +5,8 @@ collection: portfolio
 ---
 
 This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+
+<br><sub><sup>Corn (yellow) and soybean (green) land cover from 2007-2017. Sources: USDA NASS Cropland Data Layer/Landsat/Google Earth Engine</sup></sub>
+
+</sup></sub>Credit: NASA/JPL</sup></sub>
+
