--- a/_portfolio/portfolio-Osa_lulc.html
+++ b/_portfolio/portfolio-Osa_lulc.html
@@ -1,12 +1,7 @@
 ---
-title: "Portfolio item number 2"
+title: "Osa Peninsula Water Resources II"
 excerpt: "Short description of portfolio item number 2 <br/><img src='/images/osa_lulc_gif.gif'>"
+<br><sub><sup>LULC maps for Osa Peninsula for 1987, 1998, 2017. Credit: NASA DEVELOP/Osa Conservation/Google Earth Engine</sup></sub>
 collection: portfolio
----
-
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
-
-<br><sub><sup>Corn (yellow) and soybean (green) land cover from 2007-2017. Sources: USDA NASS Cropland Data Layer/Landsat/Google Earth Engine</sup></sub>
-
-</sup></sub>Credit: NASA/JPL</sup></sub>
+--- 
 
