--- a/_portfolio/portfolio-car_detect.html
+++ b/_portfolio/portfolio-car_detect.html
@@ -1,5 +1,5 @@
 ---
-title: "A Deep Convolutional Neural Network (CNN) to Classify Photos of Dogs and Cats"
+title: "Object Detection using YOLO model"
 excerpt: "'You Only Look Once' (YOLO) is a state-of-the-art object detection model that is fast and produces results with high accuracy. This algorithm was trained to run on 608x608 images and requires only one forward propagation pass through the network to make predictions. In this project, I used pre-trained weights from the "YOLOv2" model to detect cars in a dataset. The YOLO architecture runs each input image through a deep convolutional neural network. After running the model through the images, it returned all the predicted boxes for each image. The boxes were then filtered by thresholding on object and class confidence to remove boxes with low probability. A second filtering was applied using Intersection over Union (IoU) thresholding to remove overlapping boxes. The final output was one bounding box for each object with a predicted score and class.<br/><img src='/images/predict_car_2.PNG'><br><sub><sup>I used the model to detect cars in my driveway! Credit: Joseph Redmon, Santosh Divvala, Ross Girshick, Ali Farhadi - You Only Look Once: Unified, Real-Time Object Detection (2015), Allan Zelener</sup></sub>"
 
 collection: portfolio
