--- a/_portfolio/portfolio-resnet_handsign_class.html
+++ b/_portfolio/portfolio-resnet_handsign_class.html
@@ -4,7 +4,7 @@ excerpt: "One of the challenges of training a very deep neural network is the va
 <br>The project is about classifying the digit represented by a hand sign. The dataset consists of 1080 hand images for training and 120 images for validation. Here is a visual representation of the different classes:
 <br/><img src='/images/signs_data.PNG'><br><sub><sup>Credit: DeepLearning.AI</sup></sub>
 <br>I created the necessary building blocks to train a ResNet-50 model from scratch. Here is a summary of the model architecture:
-<br/><img src='/images/resnet_architecture.PNG'><br><sub><sup>Credit: DeepLearning.AI</sup></sub>
+<br/><img src='/images/resnet_architecture.PNG'><br><sub><sup>Credit: DeepLearning.AI, Kaiming He, Xiangyu Zhang, Shaoqing Ren, Jian Sun - Deep Residual Learning for Image Recognition (2015)</sup></sub>
 <br>The convolution and identity block has three convolution layers each, with convolution blocks having an additional convolution layer in a shortcut path to make sure the dimensions match up for the later stages. I trained the model for eight epochs and it achieved a 94% validation accuracy!
 <br/><img src='/images/res_hand_model_earlystop_6-13_plot.PNG'><br><sub><sup>Training history</sup></sub>"
 <br/><img src='/images/pred_hand.PNG'><br><sub><sup>I used the model to classify an image of hand sign!</sup></sub>"
